# chessoks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
.github/: DEPLOYMENT.md  commit.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  feature_request.md  refactor.md
.github/workflows/: build.yml  check.yml  deploy.yml
accounts/: forms.py  urls.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_passwordresettoken.py
accounts/models/: __init__.py  password_reset_token.py  social_user.py  user.py
accounts/serializers/: __init__.py  password_serializer.py  social_serializer.py  user_serializer.py
accounts/services/: __init__.py  password_service.py  rating_service.py  social_service.py
accounts/tests/: test_auth.py  test_password_reset.py  test_social.py
accounts/urls/: __init__.py  social_urls.py  urls.py
accounts/utils/: __init__.py  email.py
accounts/views/: password_views.py  social_views.py  user_views.py
apps/accounts/: forms.py
apps/accounts/management/commands/: cleanup_deleted_accounts.py  cleanup_expired_tokens.py
apps/accounts/migrations/: 0001_initial.py  0004_refactor_user_model_and_add_stats.py  0005_remove_social_user_tokens.py  0006_user_email_verified_user_email_verified_at_and_more.py  0007_emailverificationtoken_idx_user_is_used_and_more.py  0008_add_scheduled_deletion_at.py
apps/accounts/models/: __init__.py  email_verification_token.py  password_reset_token.py  social_user.py  user.py  user_stats.py
apps/accounts/serializers/: __init__.py  social_serializer.py  user_serializer.py
apps/accounts/services/: __init__.py  auth_service.py  social_service.py
apps/accounts/tests/: test_auth.py  test_social.py
apps/accounts/urls/: social_urls.py  urls.py
apps/accounts/utils/: __init__.py  email.py  token_helpers.py  validators.py
apps/accounts/views/: social_views.py  user_views.py
apps/chess/: apps.py  routing.py
apps/chess/models/: move.py
apps/chess/services/: __init__.py
apps/core/: apps.py  urls.py
apps/core/S3/: constants.py  uploader.py  validators.py  views.py
apps/core/tests/: conftest.py
apps/core/tests/core/: test_s3.py
chess/: apps.py  consumers.py  routing.py  urls.py
chess/migrations/: 0001_initial.py
chess/models/: __init__.py  game.py  move.py  room.py
chess/services/: __init__.py  rating_service.py
config/: asgi.py  settings.py  urls.py
docs/: SSL-SETUP.md
nginx/: Dockerfile  nginx-ssl.conf  nginx.conf
scripts/: check-all.sh  entrypoint.sh  format.sh  init-letsencrypt.sh  test.sh
templates/accounts/: login.html  naver_callback.html
